# backup-manager

./: .env.example  .gitignore  README.md  docker-compose.yaml
backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 3a939969ca4b_.py  6b4dbafc79c4_.py  8f13e8e2d4a5_tenant_settings.py  c7f91a3e2b08_add_version_to_backup_sources.py  d4a1b8f7e920_add_replications.py
backend/src/: backup_artifacts.py  backup_schedule_manager.py  base.py  crypto.py  logger.py  middleware.py  replication_manager.py  utils.py
backend/src/api/: __init__.py  backup_creation.py  backup_destinations.py  backup_schedules.py  backup_sources.py  replications.py  user_management.py
backend/src/backup_destination/: __init__.py  local_fs.py  s3.py  sftp.py  smb.py
backend/src/backup_source/: __init__.py  elasticsearch.py  minio.py  mongodb.py  mysql.py  neo4j.py  postgres.py  qdrant.py  vault.py
backend/src/models/: __init__.py  api.py  db.py  structs.py
backend/src/services/: main.py  scheduler.py  worker.py
dockerfiles/: Dockerfile.backend  Dockerfile.frontend
frontend/: eslint.config.mjs  package.json  theme.ts
frontend/public/: site.webmanifest
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/ui/: page.tsx
frontend/src/components/: BrandIcons.tsx  Sidebar.module.css  Sidebar.tsx
frontend/src/components/BackupDestination/: component.tsx
frontend/src/components/HostFields/: component.tsx
frontend/src/lib/: backendRequests.ts  cookies.ts  types.ts
(+13 files in other folders)
