[project]
name = "rag-backend-backup-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "autoflake>=2.3.1",
    "boto3>=1.41.5",
    "celery>=5.5.3",
    "cryptography>=45.0.0",
    "db-sqlite3>=0.0.1",
    "docker>=7.1.0",
    "elasticsearch==8",
    "fastapi>=0.123.0",
    "httpx>=0.28.1",
    "hvac>=2.4.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "orjson>=3.11.4",
    "paramiko>=4.0.0",
    "mysql-connector-python>=9.0.0",
    "neo4j>=5.28.2",
    "pymongo>=4.10.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "ruff>=0.14.7",
    "smbprotocol>=1.15.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "structlog>=25.5.0",
    "uvicorn>=0.38.0",
]
